# protopy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/main/: _main.py
